# openvino

./: .gitmodules
contrib/llama_cpp_plugin/: CMakeLists.txt  build.sh
contrib/llama_cpp_plugin/include/: compiled_model.hpp  infer_request.hpp  plugin.hpp
contrib/llama_cpp_plugin/src/: CMakeLists.txt  compiled_model.cpp  infer_request.cpp  plugin.cpp
contrib/llama_cpp_plugin/tools/: CMakeLists.txt  runner.cpp  tensor_comparator.cpp
src/bindings/python/src/openvino/frontend/pytorch/torchdynamo/: backend.py
src/inference/src/dev/: core_impl.cpp
src/plugins/intel_cpu/src/nodes/kernels/scaled_attn/: executor_pa.cpp
